Jboss-DB/fcc_jboss_mysql/fcc-jboss-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: fccjbosssvc
  labels:
    app: fccjbossapp
    io.service: fccjbossapp
spec:
  # type: NodePort
  selector:
    io.service: fccjbossapp
  ports:
  - port: 8080
    targetPort: 8080
status:
  loadBalancer: {}
