Jboss-DB/fcc_jboss_mysql/fcc-mysqldb-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: fccmysqlsvc
  labels:
    app: fcctomcat
    io.service: fccapp
spec:
  # type: NodePort
  clusterIP: None
  selector:
    io.service: fccapp
  ports:
  - port: 3306
    targetPort: 3306
    name: mysqldbport
